--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,27 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HW-11</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+	<div class="container">
+    <!-- Форма пошуку -->
+    <form action="submit">
+		<input type="text" class="search-input" name="choiceSearch" />
+		<button class="btn">Search</button>
+	  </form>
+  
+	  <!-- Ідентифікатор завантаження -->
+	  <span class="loader" style="display: none;"></span>
+  
+	  <!-- Результат пошуку -->
+	  <ul class="gallery-list"></ul>
+	</div>
+
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
